--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ serde_json = "1.0"
 regex = "1.0"
 serde= { version = "1.0.137", features = ["derive"] }
 colour = "0.6.0"
+inquire = "0.4.0"
+version-compare = "0.1.0"
