--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ serde= { version = "1.0.137", features = ["derive"] }
 colour = "0.6.0"
 inquire = "0.4.0"
 version-compare = "0.1.0"
+anyhow = "1.0.65"
+serde_yaml = "0.9.13"
