支持远程分支模板

--- a/src/config.yml
+++ b/src/config.yml
@@ -25,3 +25,6 @@
 
 # github work flow link commit description Like：fixed close closed
  commit_link_description: closed
+
+# 在拉取远程分支选出最新版本号后，用于拼接远程分支名称模板， {{ number }} 为版本号关键词
+remote_branch_name_template: v{{ number }}-dev
