--- a/src/nconfig.yml
+++ b/src/nconfig.yml
@@ -1,4 +1,3 @@
----
 remote_name: Tencent
 
 dev_issue_re: .*issue#?(\d+).*
@@ -16,3 +15,5 @@ commit_append_nodeman_msg: true
 commit_append_msg: (wf -l)
 
 commit_link_description: closed
+
+commit_custom_params:
