--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,12 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "3.1.18", features = ["derive"] }
-serde_json = "1.0"
 regex = "1.0"
 serde= { version = "1.0.137", features = ["derive"] }
 colour = "0.6.0"
 inquire = "0.4.0"
 version-compare = "0.1.0"
 anyhow = "1.0.65"
-serde_yaml = "0.9.13"
 handlebars = "4.3.6"
+toml = "0.7.4"
+serde_json = "1.0.96"
